--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.88.0",
     "sequelize": "^5.1.0",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "bcrypt": "^3.0.5",
