--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "bcrypt": "^3.0.5",
     "chai": "^4.2.0",
+    "dotenv": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.0.2",
     "supertest": "^4.0.2"
