--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
     "mysql2": "^1.6.5",
+    "pug": "^2.0.3",
     "sequelize": "^5.2.9",
-    "sequelize-cli": "^5.4.0",
+    "sequelize-cli": "^5.5.0",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-watch": "^5.0.1",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5"
